--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -212,35 +212,47 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-lg-4 order-1 order-lg-1 align-self-center">
+                        <div class="col-lg-12 order-1 order-lg-1 align-self-center">
                             <label asp-for="Input.RandomSeed" class="font-weight-bold">Random seed</label>
                         </div>
-                        <div class="col-lg-4 order-1 order-lg-2">
+                        <div class="col-lg-12 order-1 order-lg-2">
                             <input asp-for="Input.RandomSeed" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.RandomSeed" />
                         </div>
-                        <div class="col-lg-4 order-1 order-lg-3 mb-3">
+                        <div class="col-lg-12 order-1 order-lg-3 mb-3">
                             <span asp-description-for="Input.RandomSeed" class="text-muted small">The random seed to be used by the analysis.</span>
                             <span asp-validation-for="Input.RandomSeed" class="text-danger small"></span>
                         </div>
-                        <div class="col-lg-4 order-2 order-lg-1 align-self-center">
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 order-1 order-lg-1 align-self-center">
                             <label asp-for="Input.MaximumIterations" class="font-weight-bold">Maximum iterations</label>
                         </div>
-                        <div class="col-lg-4 order-2 order-lg-2">
+                        <div class="col-lg-4 order-1 order-lg-2">
                             <input asp-for="Input.MaximumIterations" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumIterations" />
                         </div>
-                        <div class="col-lg-4 order-2 order-lg-3 mb-3">
+                        <div class="col-lg-4 order-1 order-lg-3 mb-3">
                             <span asp-description-for="Input.MaximumIterations" class="text-muted small">The maximum number of generations for which the analysis will run.</span>
                             <span asp-validation-for="Input.MaximumIterations" class="text-danger small"></span>
                         </div>
-                        <div class="col-lg-4 order-3 order-lg-1 align-self-center">
+                        <div class="col-lg-4 order-2 order-lg-1 align-self-center">
                             <label asp-for="Input.MaximumIterationsWithoutImprovement" class="font-weight-bold">Maximum iterations without improvement</label>
                         </div>
-                        <div class="col-lg-4 order-3 order-lg-2">
+                        <div class="col-lg-4 order-2 order-lg-2">
                             <input asp-for="Input.MaximumIterationsWithoutImprovement" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumIterationsWithoutImprovement" />
                         </div>
-                        <div class="col-lg-4 order-3 order-lg-3 mb-3">
-                            <span asp-description-for="Input.MaximumIterationsWithoutImprovement" class="text-muted small">The maximum number of generations without improvement in the size of the best solutions before the analysis will stop.</span>
+                        <div class="col-lg-4 order-2 order-lg-3 mb-3">
+                            <span asp-description-for="Input.MaximumIterationsWithoutImprovement" class="text-muted small">The maximum number of generations without improvement in the size of the best solutions for which the analysis will run.</span>
                             <span asp-validation-for="Input.MaximumIterationsWithoutImprovement" class="text-danger small"></span>
+                        </div>
+                        <div class="col-lg-4 order-3 order-lg-1 align-self-center">
+                            <label asp-for="Input.MaximumRunningTime" class="font-weight-bold">Maximum running time</label>
+                        </div>
+                        <div class="col-lg-4 order-3 order-lg-2">
+                            <input asp-for="Input.MaximumRunningTime" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumRunningTime" />
+                        </div>
+                        <div class="col-lg-4 order-3 order-lg-3 mb-3">
+                            <span asp-description-for="Input.MaximumRunningTime" class="text-muted small">The maximum number of seconds for which the analysis will run. A value of zero will disable this feature.</span>
+                            <span asp-validation-for="Input.MaximumRunningTime" class="text-danger small"></span>
                         </div>
                     </div>
                     <div class="row">
