Fixed small inconsistencies.

--- a/GeneticAlgNetControl/Pages/About.cshtml
+++ b/GeneticAlgNetControl/Pages/About.cshtml
@@ -92,13 +92,13 @@
                                 <span><code>RandomSeed</code>. Represents the random seed for the current algorithm run. It must be a positive integer. However, if it is <code>-1</code>, then it will be randomly generated. Its default value is <code>@Helpers.Models.Parameters.DefaultValues.RandomSeed</code>, which means that it will be randomly generated every time.</span>
                             </li>
                             <li class="">
-                                <span><code>MaximumIterations</code>. Represents the total number of generations for which the algorithm will run. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumIterations</code>.</span>
+                                <span><code>MaximumIterations</code>. Represents the maximum number of generations for which the algorithm will run. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumIterations</code>.</span>
                             </li>
                             <li class="">
-                                <span><code>MaximumIterationsWithoutImprovement</code>. Represents the total number of generations without an improvement in the fitness of the best chromosome in the population for which the algorithm will run. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumIterationsWithoutImprovement</code>.</span>
+                                <span><code>MaximumIterationsWithoutImprovement</code>. Represents the maximum number of generations without an improvement in the fitness of the best chromosome in the population for which the algorithm will run. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumIterationsWithoutImprovement</code>.</span>
                             </li>
                             <li class="">
-                                <span><code>MaximumRunningTime</code>. Represents the total number of seconds for which the algorithm will run. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumRunningTime</code>.</span>
+                                <span><code>MaximumRunningTime</code>. Represents the maximum number of seconds for which the algorithm will run. A value of zero will disable this feature. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumRunningTime</code>.</span>
                             </li>
                             <li class="">
                                 <span><code>MaximumPathLength</code>. Represents the maximum number of edges in a control path. It must be a positive integer, and its default value is <code>@Helpers.Models.Parameters.DefaultValues.MaximumPathLength</code>.</span>
