--- a/GeneticAlgNetControl/Pages/Create.cshtml
+++ b/GeneticAlgNetControl/Pages/Create.cshtml
@@ -231,7 +231,7 @@
                             <input asp-for="Input.MaximumIterations" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumIterations" />
                         </div>
                         <div class="col-lg-4 order-1 order-lg-3 mb-3">
-                            <span asp-description-for="Input.MaximumIterations" class="text-muted small">The maximum number of generations for which the analysis will run.</span>
+                            <span asp-description-for="Input.MaximumIterations" class="text-muted small">The maximum number of generations for which the algorithm will run.</span>
                             <span asp-validation-for="Input.MaximumIterations" class="text-danger small"></span>
                         </div>
                         <div class="col-lg-4 order-2 order-lg-1 align-self-center">
@@ -241,7 +241,7 @@
                             <input asp-for="Input.MaximumIterationsWithoutImprovement" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumIterationsWithoutImprovement" />
                         </div>
                         <div class="col-lg-4 order-2 order-lg-3 mb-3">
-                            <span asp-description-for="Input.MaximumIterationsWithoutImprovement" class="text-muted small">The maximum number of generations without improvement in the size of the best solutions for which the analysis will run.</span>
+                            <span asp-description-for="Input.MaximumIterationsWithoutImprovement" class="text-muted small">The maximum number of generations without improvement in the size of the best solutions for which the algorithm will run.</span>
                             <span asp-validation-for="Input.MaximumIterationsWithoutImprovement" class="text-danger small"></span>
                         </div>
                         <div class="col-lg-4 order-3 order-lg-1 align-self-center">
@@ -251,7 +251,7 @@
                             <input asp-for="Input.MaximumRunningTime" class="form-control parameter-group-parameter" data-defaultValue="@Helpers.Models.Parameters.DefaultValues.MaximumRunningTime" />
                         </div>
                         <div class="col-lg-4 order-3 order-lg-3 mb-3">
-                            <span asp-description-for="Input.MaximumRunningTime" class="text-muted small">The maximum number of seconds for which the analysis will run. A value of zero will disable this feature.</span>
+                            <span asp-description-for="Input.MaximumRunningTime" class="text-muted small">The maximum number of seconds for which the algorithm will run. A value of zero will disable this feature.</span>
                             <span asp-validation-for="Input.MaximumRunningTime" class="text-danger small"></span>
                         </div>
                     </div>
