Updated the citation reference.

--- a/GeneticAlgNetControl/Pages/About.cshtml
+++ b/GeneticAlgNetControl/Pages/About.cshtml
@@ -48,13 +48,13 @@
                     <span>Introduction</span>
                 </div>
                 <div class="mb-1">
-                    <span><span class="font-italic font-weight-bold">GenericAlgNetControl</span> is a fast heuristic for the network target controllability problem. For a directed network, a set of targets, and a set of preferred nodes, it finds a small set of input nodes (as many of them as possible being preferred nodes) controlling the set of target nodes. The software is customised for applications in drug repurposing and combinatorial drug therapy identification based on synthetic lethality.</span>
+                    <span><span class="font-italic font-weight-bold">GeneticAlgNetControl</span> is a fast heuristic for the network target controllability problem. For a directed network, a set of targets, and a set of preferred nodes, it finds a small set of input nodes (as many of them as possible being preferred nodes) controlling the set of target nodes. The software is customised for applications in drug repurposing and combinatorial drug therapy identification based on synthetic lethality.</span>
                 </div>
                 <div class="mb-1">
                     <span>It was created using <a href="https://dotnet.microsoft.com/" target="_blank">.NET Core</a> <span class=""><i class="fas fa-external-link-alt"></i></span>.</span>
                 </div>
                 <div class="mb-1">
-                    <span>More information regarding the target controllability problem, the algorithm, the software implementation, as well as possible data sets, is available in the <a href="#about-citing-publication">corresponding publication</a>.</span>
+                    <span>More information regarding the target controllability problem, the algorithm, the software implementation, as well as possible data sets, is available in the <a href="#about-citing">corresponding publication</a>.</span>
                 </div>
             </div>
             <div id="about-usage" class="mb-3">
@@ -165,10 +165,7 @@
                     <span>Citing</span>
                 </div>
                 <div class="mb-1">
-                    <span>To cite <span class="font-italic font-weight-bold">GenericAlgNetControl</span>, please use the publication below.</span>
-                </div>
-                <div class="mb-1">
-                    <span id="about-citing-publication">V.-B. Popescu, K. Kanhaiya, I. Năstac, E. Czeizler and I. Petre, <span class="font-italic">Identifying efficient controls of complex interaction networks using genetic algorithms</span>, July 2020, available at <a href="https://arxiv.org/abs/2007.04853" target="_blank">arXiv.org</a> <span><i class="fas fa-external-link-alt"></i></span>.</span>
+                    <span>V.-B. Popescu, K. Kanhaiya, I. Năstac, E. Czeizler, and I. Petre. <span class="font-italic">Network controllability solutions for computational drug repurposing using genetic algorithms</span>. Scientific Reports, vol. 12, no. 1437 (2022), available at <a href="https://doi.org/10.1038/s41598-022-05335-3" target="_blank">https://doi.org/10.1038/s41598-022-05335-3</a> <span><i class="fas fa-external-link-alt"></i></span>.</span>
                 </div>
             </div>
         </div>
