--- a/GeneticAlgNetControl/Pages/Index.cshtml
+++ b/GeneticAlgNetControl/Pages/Index.cshtml
@@ -17,7 +17,7 @@
                         <span>Genetic Algorithms for Network Controllability</span>
                     </div>
                     <div class="text-center text-lg-left mb-4">
-                        <span>GenericAlgNetControl is a fast heuristic for the network target controllability problem. The software is customised for applications in drug repurposing and combinatorial drug therapy identification based on synthetic lethality.</span>
+                        <span>GeneticAlgNetControl is a fast heuristic for the network target controllability problem. The software is customised for applications in drug repurposing and combinatorial drug therapy identification based on synthetic lethality.</span>
                     </div>
                     <div class="text-center">
                         <a asp-page="/About" class="btn btn-success">
